--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "firebase": "^9.23.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
