--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "firebase": "^9.23.0",
+    "lottie-react": "^2.4.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
