--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "lottie-react": "^2.4.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
